--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
-SLACK_API_TOKEN=
+SLACK_API_TOKEN=xoxb-3608911372612-7417311511297-OOeTpcFsEP6Ar6GObAOnUifU
+MANAGER_PASSWORD=123
 DATABASE_NAME=slack_management_dev
 DATABASE_USER=postgres
