added teams channels

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-SLACK_API_TOKEN=xoxb-3608911372612-7417311511297-OOeTpcFsEP6Ar6GObAOnUifU
+SLACK_API_TOKEN=
 MANAGER_PASSWORD=123
 DATABASE_NAME=slack_management_dev
 DATABASE_USER=postgres
